Добавление страницы связи. Расширение таблицы стилей.

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div><a href="about_us.html">О нас</a></div>
-            <div><a href="#">Контакты</a></div>
+            <div><a href="contacts.html">Контакты</a></div>
         </header>
         <main>
             <nav>
