--- a/pages/main.html
+++ b/pages/main.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div><a href="about_us.html">О нас</a></div>
-            <div><a href="#">Контакты</a></div>
+            <div><a href="contacts.html">Контакты</a></div>
         </header>
     </body>
     <main>
@@ -31,7 +31,7 @@
                 <li><a href="#radiation">Что такое радиация?</a></li>
                 <li><a href="#desctruction">Пагубное влияние радиации на жизнь человека</a></li>
                 <li><a href="#about_site">О чём этот сайт?</a></li>
-                <li><a href="#facts">Интересные факты</li>
+                <li><a href="#facts">Интересные факты</a></li>
             </ul>
         </nav>
         <div class="main">
