--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -3,13 +3,36 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
-        <title>Радиационные аварии</title>
+        <title>Контакты</title>
     </head>
     <body>
         <header>
-
+            <div><a href="main.html">Главная</a></div>
+            <div>
+                <div>Статьи</div>
+                <div>
+                    <a href="#">Чернобыль</a>
+                    <a href="#">Фукусима</a>
+                    <a href="#">Три-Майл Айленд</a>
+                </div>
+            </div>
+            <div><a href="about_us.html">О нас</a></div>
+            <div><a href="#">Контакты</a></div>
         </header>
-        <main>
-        
-        </main>
+        <div id="form">
+            <div class="form">
+                <h1>Связаться с нами</h1>
+                <form method="post" action="#">
+                    <input type="text" name="name" placeholder="Имя">
+                    <input type="text" name="name" placeholder="Фамилия">
+                    <input type="text" name="name" placeholder="Отчество">
+                    <textarea name="message" placeholder="Ваше сообщение"></textarea>
+                </form>
+            </div>
+        </div>
+        <footer>
+            <p>Радиационные аварии</p>
+            <p>&copy; Информационный сайт Даниил Купцова</p>
+            <p>2023 - 2024 гг.</p>
+        </footer>
     </body>
