Составление полного макета сайта.

--- a/pages/main.html
+++ b/pages/main.html
@@ -14,9 +14,9 @@
             <div>
                 <div>Статьи</div>
                 <div>
-                    <a href="#">Чернобыль</a>
-                    <a href="#">Фукусима</a>
-                    <a href="#">Три-Майл Айленд</a>
+                    <a href="chernobyl.html">Чернобыль</a>
+                    <a href="fukusima.html">Фукусима</a>
+                    <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
             </div>
             <div><a href="about_us.html">О нас</a></div>
