--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -27,6 +27,7 @@
                     <input type="text" name="name" placeholder="Фамилия">
                     <input type="text" name="name" placeholder="Отчество">
                     <textarea name="message" placeholder="Ваше сообщение"></textarea>
+                    <input type="button" value="Отправить!" id="button">
                 </form>
             </div>
         </div>
