Работа по проекту
1. Изменена цветовая схема сайта на сине-серую. Возможно, требуются изменения;
2. Улучшена работа кнопки "Статьи", однако требуется доработка;
3. Сайт адаптивен ко всем типам разрешений, кроме Galaxy Gold.

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -5,19 +5,19 @@
         <link rel="stylesheet" href="index.css">
         <title>Контакты</title>
     </head>
-    <body>
+    <body class="background_сontacts">
         <header>
             <div><a href="main.html">Главная</a></div>
             <div>
                 <div>Статьи</div>
                 <div>
-                    <a href="#">Чернобыль</a>
-                    <a href="#">Фукусима</a>
-                    <a href="#">Три-Майл Айленд</a>
+                    <a href="chernobyl.html">Чернобыль</a>
+                    <a href="fukusima.html">Фукусима</a>
+                    <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
             </div>
             <div><a href="about_us.html">О нас</a></div>
-            <div><a href="#">Контакты</a></div>
+            <div><a href="contacts.html" style="color: gold">Контакты</a></div>
         </header>
         <div id="form">
             <div class="form">
@@ -26,9 +26,10 @@
                     <input type="text" name="name" placeholder="Имя">
                     <input type="text" name="name" placeholder="Фамилия">
                     <input type="text" name="name" placeholder="Отчество">
-                    <textarea name="message" placeholder="Ваше сообщение"></textarea>
+                    <textarea name="message" placeholder="Ваше сообщение" rows="5"></textarea>
                     <input type="button" value="Отправить!" id="button">
                 </form>
+            <div class="pages"></div>
             </div>
         </div>
         <footer>
