--- a/pages/fukusima.html
+++ b/pages/fukusima.html
@@ -13,7 +13,7 @@
                 <div>Статьи</div>
                 <div>
                     <a href="chernobyl.html">Чернобыль</a>
-                    <a href="fukusima.html">Фукусима</a>
+                    <a href="fukusima.html"></a>Фукусима</a>
                     <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
             </div>
