--- a/pages/main.html
+++ b/pages/main.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <img src="../images/main_picture.jpg">
-        <div id="title">Радиационные аварии</div>
-        <header>
-            <div><a href="main.html">Главная</a></div>
+        <!-- <div id="title">Радиационные аварии</div> -->
+        <header id="main_header">
+            <div><a href="main.html" style="color: gold">Главная</a></div>
             <div>
-                <div>Статьи</div>
+                <a>Статьи</a>
                 <div>
                     <a href="chernobyl.html">Чернобыль</a>
                     <a href="fukusima.html">Фукусима</a>
