Изменение в структуре сайта.

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -7,7 +7,7 @@
     </head>
     <body class="background_сontacts">
         <header>
-            <div><a href="main.html">Главная</a></div>
+            <div><a href="index.html">Главная</a></div>
             <div>
                 <div>Статьи</div>
                 <div>
