--- a/pages/fukusima.html
+++ b/pages/fukusima.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <header>
-            <div><a href="main.html">Главная</a></div>
+            <div><a href="index.html">Главная</a></div>
             <div>
                 <div>Статьи</div>
                 <div>
                     <a href="chernobyl.html">Чернобыль</a>
-                    <a href="fukusima.html"></a>Фукусима</a>
+                    <a href="fukusima.html">Фукусима</a>
                     <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
             </div>
@@ -22,7 +22,7 @@
         </header>
         <main>
             <nav>
-                <p><a href="main.html">Главная</a> / Фукусима</p>
+                <p><a href="index.html">Главная</a> / Фукусима</p>
                 <h2>Схема сайта</h2>
                 <ul>
                     <li><a href="#fukusima">Авария на Фукусиме-1</a></li>
