--- a/pages/three_mail_island.html
+++ b/pages/three_mail_island.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <div><a href="main.html">Главная</a></div>
+            <div><a href="index.html">Главная</a></div>
             <div>
                 <div>Статьи</div>
                 <div>
@@ -22,7 +22,7 @@
         </header>
         <main>
             <nav>
-                <p><a href="main.html">Главная</a> / Три-Майл-Айленд</p>
+                <p><a href="index.html">Главная</a> / Три-Майл-Айленд</p>
                 <h2>Схема сайта</h2>
                 <ul>
                     <li><a href="#chernobyl">Авария на Три-Майл-Айленде</a></li>
