--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
         <img src="../images/main_picture.jpg">
         <!-- <div id="title">Радиационные аварии</div> -->
         <header id="main_header">
-            <div><a href="main.html" style="color: gold">Главная</a></div>
+            <div><a href="index.html" style="color: gold">Главная</a></div>
             <div>
                 <a>Статьи</a>
                 <div>
