--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
         <title>Радиационные аварии</title>
     </head>
     <body>
-        <div class="main_picture"></div>
+        <img src="../images/main_picture.jpg">
         <!-- <div id="title">Радиационные аварии</div> -->
         <header id="main_header">
             <div><a href="index.html" style="color: gold">Главная</a></div>
