--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -9,11 +9,11 @@
     <body>
         <header>
             <div><a href="index.html">Главная</a></div>
-            <div>
-                <div>Статьи</div>
-                <div>
-                    <a href="chernobyl.html">Чернобыль</a>
+            <div class="menu_container">
+                <button class="menu_name">Статьи</button>
+                <div class="menu_content">
                     <a href="fukusima.html">Фукусима</a>
+                    <a href="chernobyl.html">Чернобыль</a>
                     <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
             </div>
