--- a/pages/index.html
+++ b/pages/index.html
@@ -7,17 +7,18 @@
         <title>Радиационные аварии</title>
     </head>
     <body>
-        <img src="../images/main_picture.jpg">
+        <div class="main_picture"></div>
         <!-- <div id="title">Радиационные аварии</div> -->
         <header id="main_header">
             <div><a href="index.html" style="color: gold">Главная</a></div>
-            <div>
-                <a>Статьи</a>
-                <div>
-                    <a href="chernobyl.html">Чернобыль</a>
+            <div class="menu_container">
+                <button class="menu_name">Статьи</button>
+                <div class="menu_content">
                     <a href="fukusima.html">Фукусима</a>
+                    <a href="chernobyl.html">Чернобыль</a>
                     <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
+            </div>
             </div>
             <div><a href="about_us.html">О нас</a></div>
             <div><a href="contacts.html">Контакты</a></div>
