Улучшена адаптация сайта для различных устройств

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div class="main_picture"></div>
+        <img href = "../images/main_picture.jpg"></img>
         <!-- <div id="title">Радиационные аварии</div> -->
         <header id="main_header">
             <div><a href="index.html" style="color: gold">Главная</a></div>
