Структура сайта практически не изменилась. Но написана пояснительная записка.

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,10 @@
         <title>Радиационные аварии</title>
     </head>
     <body>
-        <div class="main_picture"></div>
+        <div class="main_picture">
+            <!-- <h1 class="title">Радиационные аварии</span>
+            <p>Радиация - наше настоящее</p> -->
+        </div>
         <img href = "../images/main_picture.jpg"></img>
         <!-- <div id="title">Радиационные аварии</div> -->
         <header id="main_header">
