Изменение цветовой схемы и шрифтов

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="../styles/index.css">
         <title>О нас</title>
     </head>
     <body>
@@ -55,8 +55,10 @@
                 </p>
                 <p>Именно потому, что я имею долгую историю связи с ядерной энергетикой и была выбрана эта тема.</p>
                 <h2>Контакты<a name="contacts"></a></h2>
-                <p>Электронная почта: danilkup23@yandex.ru</p>
-                <p>Профиль на GitHub: danik3813</p>
+                <div class="links">
+                    <a href="https://github.com/Danik3813"><img src = "../images/github.png"></a>
+                    <a href="https://vk.com/danik3813"><img src = "../images/vk.png"></a>
+                </div>
             </div>
         </main>
         <footer>
