--- a/pages/chernobyl.html
+++ b/pages/chernobyl.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="../styles/index.css">
         <title>Чернобыль</title>
     </head>
     <body>
@@ -13,7 +13,7 @@
                 <button class="menu_name">Статьи</button>
                 <div class="menu_content">
                     <a href="fukusima.html">Фукусима</a>
-                    <a href="chernobyl.html">Чернобыль</a>
+                    <a href="chernobyl.html" style = "color: gold;">Чернобыль</a>
                     <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
             </div>
@@ -22,7 +22,6 @@
         </header>
         <main>
             <nav>
-                <p><a href="index.html">Главная</a> / Чернобыль</p>
                 <h2>Схема сайта</h2>
                 <ul>
                     <li><a href="#chernobyl">Авария на Чернобыльской АЭС</a></li>
