--- a/pages/fukusima.html
+++ b/pages/fukusima.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="../styles/index.css">
         <title>Фукусима</title>
     </head>
     <body>
@@ -12,7 +12,7 @@
             <div class="menu_container">
                 <button class="menu_name">Статьи</button>
                 <div class="menu_content">
-                    <a href="fukusima.html">Фукусима</a>
+                    <a href="fukusima.html" style = "color: gold;">Фукусима</a>
                     <a href="chernobyl.html">Чернобыль</a>
                     <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
