--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="../styles/index.css">
         <title>Контакты</title>
     </head>
     <body class="background_сontacts">
@@ -21,11 +21,12 @@
         </header>
         <div id="form">
             <div class="form">
-                <h1>Связаться с нами</h1>
+                <h1 style="color:black;">Связаться с нами</h1>
                 <form method="post" action="#">
                     <input type="text" name="name" placeholder="Имя">
-                    <input type="text" name="name" placeholder="Фамилия">
-                    <input type="text" name="name" placeholder="Отчество">
+                    <input type="text" name="surname" placeholder="Фамилия">
+                    <input type="text" name="father_name" placeholder="Отчество">
+                    <input type="email" name="email" placeholder="Электронная почта">
                     <textarea name="message" placeholder="Ваше сообщение" rows="5"></textarea>
                     <input type="button" value="Отправить!" id="button">
                 </form>
