--- a/pages/index.html
+++ b/pages/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="../styles/index.css">
         <title>Радиационные аварии</title>
     </head>
     <body>
         <div class="main_picture">
-            <!-- <h1 class="title">Радиационные аварии</span>
-            <p>Радиация - наше настоящее</p> -->
+            <h1 class="title">Радиационные аварии</span>
+            <p>Наша жизнь невозможна без использования атома в мирных целях</p>
+            <p>Но порою наша беспечность приводит к катастрофам...</p>
         </div>
         <img href = "../images/main_picture.jpg"></img>
-        <!-- <div id="title">Радиационные аварии</div> -->
         <header id="main_header">
             <div><a href="index.html" style="color: gold">Главная</a></div>
             <div class="menu_container">
