--- a/pages/three_mail_island.html
+++ b/pages/three_mail_island.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="../styles/index.css">
         <title>Чернобыль</title>
     </head>
     <body>
@@ -14,7 +14,7 @@
                 <div class="menu_content">
                     <a href="fukusima.html">Фукусима</a>
                     <a href="chernobyl.html">Чернобыль</a>
-                    <a href="three_mail_island.html">Три-Майл Айленд</a>
+                    <a href="three_mail_island.html" style = "color: gold;">Три-Майл Айленд</a>
                 </div>
             </div>
             <div><a href="about_us.html">О нас</a></div>
@@ -37,28 +37,34 @@
                 </p>
                 <img src="../images/carter.jpg">
                 <h2>Ход событий<a name="times"></a></h2>
-                <p>На ЧАЭС в ночь на 26-е апреля проводились плановые испытания. Однако, в результате ошибочных действий сотрудников станции,
-                    а также в из-за скрытой информации о структурной особенности самого реактора, прогремели два мощных взырва: сначала был уничтожен
-                    сам реактор, а далее реакторное помещение. Погиб сотрудник станции Валерий Ходемчук, тело которого так и не было обнаружено.
+                <p>В ночь с 27 на 28 марта 1979 года энергоблок №2 работал в штатном режиме, но был загружен на 97%. 
+                    При этом сотрудники знали о двух ключевых проблемах: постоянная протечка теплоносителя через затвор, а также
+                    происходила закупорка смолой трубопровода выгрузки. 
                 </p>
-                <p>Прибыли пожарные на тушение. Ценой своей жизни им удалось пламя на крыше четвертого энергоблока: пожарные впоследствии погибли
-                    от лучевой болезни. Однако, выброс колоссального количества радиоактивных веществ продолжался. Именно поэтому была созвана 
-                    комиссия, по которой эвакуировали первых пострадавших.
+                <p>Вне ведома сотрудников станци начала происходить большая утечка тепллоносителя. Операторы предприняли попытку
+                    умешишьть утечку, отключением воды, однако это усугибило ситуацию и давление продолжило снижаться.
+                </p>
+                <p>Давление в реакторе становилось всё больше, однако операторы подумали, что ситуация приемлема, хотя
+                    и необычная. Прекратилась циркуляция воды и началось осушение активной зоны реактора.
                 </p>
                 <img src="../images/panel.png">
-                <p>Через 36 часов началась масштабная эвакуация населения из города и близлежащих районов.</p>
-                <p>Дальнейшие действия советской комиссии по ликвидации последствий были следующие: реактор был засыпан сместью брома с песком, 
-                    что прекратило выброс радиоактивных веществ. Были проведены массовые расстрелы животных, дабы они не разносили заразу по
-                    территории Украины.
+                <p>Новый сменнный персонал прибывший в 6 утра смог оценить масштаб надвигающийся аварии, однако
+                    по неустановленным причинам не смогли это сделать.
+                </p>
+                <p>Началось разрушение активной зоны реактора и смогла проникнуть в окружающие конструкции. Персонал решил отказаться
+                    от вмешательства в автоматическую систему и уничтожение активной зоны прекратилось.
                 </p>
                 <h2>Причины<a name="reasons"></a></h2>
                 <ul>
-                    <li>грубые нарушения эксплуатации реактора, не соблюдение техники безопасности;</li>
-                    <li>конструктивные ошибки в самом реакторе, сокрытие этой информации;</li>
-                    <li>попытка довести эксперимент до конца.</li>
+                    <li>несвоевременное обнаружение утечки тепллоносителя;</li>
+                    <li>неподготовленность персонала к подобным ситуациям;</li>
+                    <li>сокрытие конструктивных особенностей и возможностей от персонала.</li>
                 </ul>
                 <h2>Последствия<a name="ends"></a></h2>
-                <p>В первую очередь были внесены изменения в конструкции реакторов типа РБМК. Проведены расследования. Наказаны виновники.</p>
+                <p>Как ни странно, серьезных последствий не наступило. Уровень загрязнения окружающей среды не превысил
+                    катастрофических норм. Но попытки устранить радиационное загрязнение произошло. Управляющая компания
+                    посчитала это невыгодным.
+                </p>
             </div>
         </main>
         <footer>
