--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -17,19 +17,22 @@
                     <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
             </div>
-            <div><a href="about_us.html" style="color: gold">О нас</a></div>
+            <div><a href="about_us.html" style="color: gold">Об авторе</a></div>
             <div><a href="contacts.html">Контакты</a></div>
         </header>
         <main>
             <nav>
-                <p><a href="index.html">Главная</a> / О нас</p>
                 <h2>Схема сайта</h2>
                 <ul>
                     <li><a href="#about_us">О сайте</a></li>
                     <li><a href="#author">Об авторе сайта</a></li>
                     <li><a href="#idea">Откуда такая идея?</a></li>
-                    <li><a href="#contacts">Контакты</a></li>
                 </ul>
+                <h2>Контакты<a name="contacts"></a></h2>
+                <div class="links">
+                    <a href="https://github.com/Danik3813"><img src = "../images/github.png"></a>
+                    <a href="https://vk.com/danik3813"><img src = "../images/vk.png"></a>
+                </div>
             </nav>
             <div class="main">
                 <h1><a name="about_us"></a>
@@ -49,16 +52,9 @@
                 </p>
                 <img src="../images/danil_kuptsov.jpg">
                 <h2>Откуда такая идея?<a name="idea"></a></h2>
-                <p>В детстве я имел небывалый интерес к ядерной энергетике. В частности, углубленно изучал вопрос аварии в Чернобыле, в 1986 году.
-                    В дальнейшем продолжал изучение уже с позиции атомного оружия. На данный момент, непосредственно связан с концерном &laquo;Росэнергоатом
-                    &raquo; участием в различных конкурсах. Занял с командой второе место во всероссийском конкурсе, посвzщенном атомным станциям по всему миру.
+                <p>Данная тема является акутальна по причине массвого строительства атомных электростанций в России. Также подобная просветительская деятельность
+                    позволит улучшить осведомленность населения в области ядерной безопасности.
                 </p>
-                <p>Именно потому, что я имею долгую историю связи с ядерной энергетикой и была выбрана эта тема.</p>
-                <h2>Контакты<a name="contacts"></a></h2>
-                <div class="links">
-                    <a href="https://github.com/Danik3813"><img src = "../images/github.png"></a>
-                    <a href="https://vk.com/danik3813"><img src = "../images/vk.png"></a>
-                </div>
             </div>
         </main>
         <footer>
