--- a/pages/chernobyl.html
+++ b/pages/chernobyl.html
@@ -17,7 +17,7 @@
                     <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
             </div>
-            <div><a href="about_us.html">О нас</a></div>
+            <div><a href="about_us.html">Об авторе</a></div>
             <div><a href="contacts.html">Контакты</a></div>
         </header>
         <main>
@@ -29,21 +29,33 @@
                     <li><a href="#reasons">Причины</a></li>
                     <li><a href="#ends">Последствия</a></li>
                 </ul>
+                <h2>Фотоальбом</h2>
+                <img src="../images/chernobyl/chernobyl1.jpg">
+                <img src="../images/chernobyl/chernobyl2.jpg">
+                <img src="../images/chernobyl/chernobyl3.jpg">
+                <img src="../images/chernobyl/chernobyl4.jpg">
+                <img src="../images/chernobyl/chernobyl5.jpg">
             </nav>
             <div class="main">
-                <h1>Авария на Чернобольской АЭС<a name="chernobyl"></a></h1>
-                <p>В 1986 году, на территории Украинской ССР, в городе Чернобыль, произошла чудовищная авария, в результате которой был разрушен
+                <h1>Авария на Чернобыльской АЭС<a name="chernobyl"></a></h1>
+                <p>В 1986 году, на территории Украинской ССР, в городе Чернобыль, произошла чудовищная авария, в результате которой был полностью уничтожен
                     четвертый энергоблок Чернобыльской АЭС.
                 </p>
                 <img src="../images/chernobyl.jpg">
                 <h2>Ход событий<a name="times"></a></h2>
-                <p>На ЧАЭС в ночь на 26-е апреля проводились плановые испытания. Однако, в результате ошибочных действий сотрудников станции,
-                    а также в из-за скрытой информации о структурной особенности самого реактора, прогремели два мощных взырва: сначала был уничтожен
-                    сам реактор, а далее реакторное помещение. Погиб сотрудник станции Валерий Ходемчук, тело которого так и не было обнаружено.
+                <p>На ЧАЭС в ночь на 26-е апреля проводились плановые испытания. Задача состояла в тесте возможностей турбонагнетателя четвертого реактора. 
+                    Эксперимент проходил успешно с плановым сниженим мощности. Однако, мощность падала ниже необходимых значений, а давление в контурах было
+                    в два раза ниже стандартного.
                 </p>
-                <p>Прибыли пожарные на тушение. Ценой своей жизни им удалось пламя на крыше четвертого энергоблока: пожарные впоследствии погибли
+                <p>В 1:22 произошло резкое снижение активности реактора. Начато испытание турбогенератора, однако сила реактора начала мгновенно возрастать.
+                    Быстрое увеличение мощности пара и мощности реактора (в течение нескольких секунд мощность была примерно в 100 раз выше, чем необходимое значение).
+                    Произошел перегрев топлива, разрыв окружающего его диоксида циркония и утечка расплавленного топлива, а затем разрыв каналов давления. 
+                    Это начало приводить к экзотермической реакции.
+                </p>
+                <p>Произошли два взрыва: первый разрушил конструкцию реактора, а затем было разрушено уже само помещение энергоблока.</p>
+                <p>Пожарные были подняты по тревоге. Ценой своей жизни им удалось пламя на крыше четвертого энергоблока: пожарные впоследствии погибли
                     от лучевой болезни. Однако, выброс колоссального количества радиоактивных веществ продолжался. Именно поэтому была созвана 
-                    комиссия, по которой эвакуировали первых пострадавших.
+                    комиссия, по которой началось подавление последствий радиационной аварии.
                 </p>
                 <img src="../images/chernobyl_fire.jpeg">
                 <p>Через 36 часов началась масштабная эвакуация населения из города и близлежащих районов.</p>
@@ -58,7 +70,14 @@
                     <li>попытка довести эксперимент до конца.</li>
                 </ul>
                 <h2>Последствия<a name="ends"></a></h2>
-                <p>В первую очередь были внесены изменения в конструкции реакторов типа РБМК. Проведены расследования. Наказаны виновники.</p>
+                <p>Уже 27 апреля началась массовая эвакуация населения из района Припяти, при этом в других городах Украины продолжались подготовки к первомаю.
+                    Специальная комиссия разработала методы по борьбе с Последствиями, в частности, для прекращения расплавления активной зоны и прекращения
+                    ядерной реакции использовали бромную смесь с песком.
+                </p>
+                <p>В дальнейшем проводились большие расследования, в результате которых выяснилось, что прежде всего ошибка была в реакторе. В частности,
+                    при срабатывании аварийной защиты АЗ-5 вместо снижения активности реактора она резко возросла, что и кардинально повлияло на дальнейших ход реакции.
+                    Ответственные за аварию были наказаны, были внесены изменения в конструкцию реактора на других станциях.    
+                </p>
             </div>
         </main>
         <footer>
