--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -16,7 +16,7 @@
                     <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
             </div>
-            <div><a href="about_us.html">О нас</a></div>
+            <div><a href="about_us.html">Об авторе</a></div>
             <div><a href="contacts.html" style="color: gold">Контакты</a></div>
         </header>
         <div id="form">
