--- a/pages/fukusima.html
+++ b/pages/fukusima.html
@@ -17,12 +17,11 @@
                     <a href="three_mail_island.html">Три-Майл Айленд</a>
                 </div>
             </div>
-            <div><a href="about_us.html">О нас</a></div>
+            <div><a href="about_us.html">Об авторе</a></div>
             <div><a href="contacts.html">Контакты</a></div>
         </header>
         <main>
             <nav>
-                <p><a href="index.html">Главная</a> / Фукусима</p>
                 <h2>Схема сайта</h2>
                 <ul>
                     <li><a href="#fukusima">Авария на Фукусиме-1</a></li>
@@ -30,6 +29,12 @@
                     <li><a href="#reasons">Причины</a></li>
                     <li><a href="#ends">Последствия</a></li>
                 </ul>
+                <h2>Фотоальбом</h2>
+                <img src="../images/fukusima/fukusima1.jpg">
+                <img src="../images/fukusima/fukusima2.jpeg">
+                <img src="../images/fukusima/fukusima3.jpg">
+                <img src="../images/fukusima/fukusima4.jpg">
+                <img src="../images/fukusima/fukusima5.jpg">
             </nav>
             <div class="main">
                 <h1>Авария на Фукусиме-1<a name="fukusima"></a></h1>
