--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             </div>
-            <div><a href="about_us.html">О нас</a></div>
+            <div><a href="about_us.html">Об авторе</a></div>
             <div><a href="contacts.html">Контакты</a></div>
         </header>
         <main>
@@ -40,31 +40,28 @@
             </nav>
             <div class="main">
                 <h1><a name="eduction"></a>Почему важно вести просветительскую деятельность в области ядерной безопасности?</h1>
-                <p>Дело в том, что многие люди стремятся попасть в ядерную энергетику, ввиду высокого зароботка. Однако, немногие осознают масштаб
-                    ответственности, который возлагается на людей, работаюющих в этой сфере. Именно поэтому необходимо распространять информацию 
-                    о том, к чему беспечность может привести.
+                <p>Многие люди стремятся попасть в сферу ядерной энергетики по <i>простой причине</i>: высокий заработок. Однако, нельзя забывать, с чём придется иметь дело.
+                    Ведь использование энергии, запасённой в самом атоме, является невероятно полезным делом, но и требует большой подготовки. Это <b>большая ответственность.</b>
+                    И беспечность людей в этой области может привести к трагедиям.
                 </p>
                 <img src="../images/chernobyl_main.jpg">
-                <p>На рисунке изображена авария на Чернобыльской АЭС. Это яркий пример того, к чему может привести халатность к ядерным технологиям,
+                <p>На рисунке изображена авария на <b>Чернобыльской АЭС</b>. Это яркий пример того, к чему может привести халатность к ядерным технологиям,
                     в частности, к ядерным испытаниям.
                 </p>
                 <h2><a name="radiation"></a>Что такое радиация?</h2>
-                <p>Чаще всего под &laquo;радиацией&raquo; подразумевают ионизирующее излучение.</p>
-                <p>ионизирующее изучление - выброс в окружающую среду большого количества высокоэнергетических частиц. К нему не относят видимый свет,
-                    ультрафиолетовое и инфракрасное излучение (не обладают достаточной скоростью для этого).
-                </p>
+                <p>Чаще всего под <i>&laquo;радиацией&raquo;</i> подразумевают ионизирующее излучение.</p>
+                <p><B>Ионизирующее излучение</B> - выброс в окружающую среду большого количества высокоэнергетических частиц. </p>
+                <p>К нему не относят видимый свет, ультрафиолетовое и инфракрасное излучение (не обладают достаточной скоростью для этого).</p>
                 <h2><a name="desctruction"></a>Пагубное влияние радиации на жизнь человека</h2>
                 <p>Особенность явления радиоактивности состоит в том, что она может крайне опасно влиять на организм живого существа.</p>
                 <p>В частности, гамма-излучение: поток высокоэнергетических фотонов. Их движени настолько быстро, что они способны разрушать
-                    внутреннюю струкутры клетки человека в считанные дни и часы. Это заболевание называется лучевым. И лечению они практически не
-                    поддаются. Пожалуй, одно из страшнейших заболеваний в истории человечества, ибо в тяжелой форме болезненное состояние сопровождается
-                    адскими муками.
-                </p>
+                    внутреннюю струкутры клетки человека в считанные часы. Данное заболевание называется лучевым. И лечению <b>лучевая болезнь</b> не
+                    поддаётся. Пожалуй, одно из страшнейших заболеваний в истории человечества, ибо в тяжелой форме болезненное состояние сопровождается
+                    адскими муками.</p>
                 <h2><a name="about_site"></a>О чём этот сайт?</h2>
-                <p>Своей целью я ставлю рассказать об ужаснейших катастрофах в области ядерной энергетики, таких как авария на Чернобыльской АЭС, Фукусима и
-                    на Три-Майл-Айленде. Они продемонстрировали тот факт, что человечеству необходимо постоянно совершенстовать данные технологии. А
-                    беспечность может привести к гибели не только сотен, но и тысяч жизней.
-                </p>
+                <p>Цель этого сайта рассказать об ужаснейших катастрофах в области ядерной энергетики, таких как авария на Чернобыльской АЭС, авария на 
+                    Фукусима-1 и авария на Три-Майл-Айленде. Они продемонстрировали тот факт, что человечеству необходимо постоянно совершенстовать данные технологии. 
+                    Ибо халатное и беспечное отношение может привести к гибели не только сотен, но и тысяч жизней.</p>
             </div>
             <aside>
                 <h2><a name="facts"></a>Интересные факты</h2>
@@ -79,7 +76,7 @@
         </main>
         <footer>
             <p>Радиационные аварии</p>
-            <p>&copy; Информационный сайт Даниил Купцова</p>
+            <p>&copy; Информационный сайт Даниила Купцова</p>
             <p>2023 - 2024 гг.</p>
         </footer>
     </body>
