--- a/pages/three_mail_island.html
+++ b/pages/three_mail_island.html
@@ -17,12 +17,11 @@
                     <a href="three_mail_island.html" style = "color: gold;">Три-Майл Айленд</a>
                 </div>
             </div>
-            <div><a href="about_us.html">О нас</a></div>
+            <div><a href="about_us.html">Об авторе</a></div>
             <div><a href="contacts.html">Контакты</a></div>
         </header>
         <main>
-            <nav>
-                <p><a href="index.html">Главная</a> / Три-Майл-Айленд</p>
+            <nav>       
                 <h2>Схема сайта</h2>
                 <ul>
                     <li><a href="#chernobyl">Авария на Три-Майл-Айленде</a></li>
@@ -30,6 +29,12 @@
                     <li><a href="#reasons">Причины</a></li>
                     <li><a href="#ends">Последствия</a></li>
                 </ul>
+                <h2>Фотоальбом</h2>
+                <img src="../images/island/island1.jpg">
+                <img src="../images/island/island2.jpeg">
+                <img src="../images/island/island3.jpg">
+                <img src="../images/island/island4.jpg">
+                <img src="../images/island/island5.jpg">
             </nav>
             <div class="main">
                 <h1>Авария на Три-Майл-Айленде<a name="chernobyl"></a></h1>
